<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/linear_image_view"
            android:layout_width="wrap_content"
            android:layout_height="276dp"
            android:contentDescription="@string/linear_algebra"
            app:srcCompat="@drawable/linear_image" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3" />



        <Button
            android:id="@+id/compute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compute" />

        <Button
            android:id="@+id/past_compute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stored_file" />

        <Button
            android:id="@+id/quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quit" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>